canary/service-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-canary
  labels:
    app: demo
    track: canary
spec:
  selector:
    app: demo
    track: canary
  ports:
    - name: http
      port: 80
      targetPort: 8080
